# jenkins-inspector

./: .gitignore  CODING_GUIDE.md  README.md  pyproject.toml  setup.py
docs/examples/: add-job-to-view.md  auth.md  build.md  console.md  copy-job.md  create-job.md  delete-builds.md  delete-job.md  describe-credentials.md  disable-job.md  enable-job.md  get-job.md  groovy.md  help.md  job-diff.md  job-status.md  list-builds.md  list-credentials.md  list-jobs.md  list-views.md  prompt.md  stop-builds.md  update-job.md
jenkins_tools/: __init__.py  cli.py  core.py
jenkins_tools/commands/: __init__.py  add_job_to_view.py  auth.py  build.py  console.py  copy_job.py  create_job.py  delete_builds.py  delete_job.py  describe_credentials.py  disable_job.py  enable_job.py  get_job.py  groovy.py  help.py  job_diff.py  job_status.py  list_builds.py  list_credentials.py  list_jobs.py  list_views.py  prompt.py  stop_builds.py  update_job.py
jenkins_tools/credential_describers/: __init__.py  azure_credentials.py  azure_storage_credentials.py  base.py  browserstack_credentials.py  file_credentials.py  gcp_credentials.py  gitlab_token_credentials.py  ssh_key_credentials.py  string_credentials.py  username_password_credentials.py
